# delulu-plus

./: .gitignore  Delulu+.spec  LICENSE  README.md  app_colors.json  launcher_fast.py  pyproject.toml  requirements.txt
src/: __init__.py  __main__.py  common_imports.py
src/core/: __init__.py  ai_interface.py  chat_manager.py  prompt_formatter.py
src/models/: __init__.py  api_config.py  character.py  chat_models.py  ui_models.py  user_profile.py
src/ui/: __init__.py  dialogs.py  main_window.py  widgets.py
src/utils/: __init__.py  file_manager.py  helpers.py
